@@ -1,3 +1,9 @@
+2018-10-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* dvispc.test: Add tests for underflow.
+	* tests/under.{tex,dvi}, tests/underout.dvi: New tests.
+	* Makefile.am: Adjusted.
+
 2018-10-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* dvispc.c: Use common routine for EXE2MODIFY and EXE2CHECK
